manifests/nodeapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: diagne48/nodeapp:v1  
        ports:
        - containerPort: 3000
        
        livenessProbe:
          httpGet:
            path: /health/live
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  type: NodePort
  selector:
    app: nodeapp
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001  # Change this as needed
